@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tcl.h,v 1.34 1999/03/10 05:52:46 stanton Exp $
+ * RCS: @(#) $Id: tcl.h,v 1.35 1999/03/10 06:12:55 stanton Exp $
  */
 
 #ifndef _TCL
@@ -1071,12 +1071,9 @@ typedef enum Tcl_PathType {
 /*
  * The following constant is used to test for older versions of Tcl
  * in the stubs tables.
- *
- * The plus patch implementation uses 0xFCA1BACF so we need to pick
- * a different value to avoid accidental matches.
  */
 
-#define TCL_STUB_MAGIC 0xFCA3BACF
+#define TCL_STUB_MAGIC 0xFCA1BACF
 
 /*
  * The following function is required to be defined in all stubs aware
